[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameUI/MenuElements/slider_element.gd" type="Script" id=1]
[ext_resource path="res://GameUI/fonts/main_font_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameUI/MenuElements/resources/MenuElementPanelFocusedStylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://GameUI/fonts/main_font_bold_26.tres" type="DynamicFont" id=4]

[node name="SliderElement" type="HSlider"]
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
step = 10.0
scrollable = false
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 3 )

[node name="HeaderLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 4.0
margin_right = 74.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "TEXT"

[node name="SubLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -28.0
margin_right = 46.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "0%"
